[package]
name = "bitmatch"
version = "0.1.0"
authors = ["Cassie Jones <code@witchoflight.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
boolean_expression = "0.3.10"
proc-macro2 = "1.0"
