[package]
name = "bitmatch"
version = "0.1.1"
authors = ["Cassie Jones <code@witchoflight.com>"]
edition = "2018"
license = "MPL-2.0"
description = "A macro to allow matching, binding, and packing the individual bits of integers."
repository = "https://github.com/porglezomp/bitmatch"
documentation = "https://docs.rs/crate/bitmatch"
readme = "README.md"
keywords = ["bitpacking", "binary", "decoder", "matching", "macro"]
categories = ["parsing", "no-std"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "visit", "visit-mut"] }
quote = "1.0"
boolean_expression = "0.3.10"
proc-macro2 = "1.0"

[badges]

maintenance.status = "passively-maintained"
